#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
#
# File: CMakeLists.txt
#
# Brief: Cmake list file.
#
# Author: Bo Liu (bo.robotics@gmail.com)
#
# Copyleft
#
#+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
cmake_minimum_required(VERSION 3.5)
#-------------------------------------------------------------------------------
# cmake project
#-------------------------------------------------------------------------------
project(TwoPointers)

#-------------------------------------------------------------------------------
# Sources
#-------------------------------------------------------------------------------
#
add_subdirectory(TargetSum)
add_subdirectory(RemoveKey)
add_subdirectory(RemoveDuplicates)
add_subdirectory(TripletSumToZero)
add_subdirectory(CompStrBackspaces)